force-app/main/default/objects/Broadcast__c/Broadcast__c.object-meta.xml
<CustomObject>
    <label>WB Broadcast</label>
    <nameField>
        <displayFormat>Broadcast {0}</displayFormat>
        <label>Broadcast Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WB Broadcasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>