force-app/main/default/objects/Broadcast__c/fields/Broadcast_Group__c.field-meta.xml
<CustomField>
    <fullName>Broadcast_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broadcast Group</label>
    <referenceTo>Broadcast_Group__c</referenceTo>
    <relationshipLabel>WB Broadcasts</relationshipLabel>
    <relationshipName>WB_Broadcasts</relationshipName>
    <type>Lookup</type>
</CustomField>