force-app/main/default/objects/Broadcast__c/fields/Delivered__c.field-meta.xml
<CustomField>
    <fullName>Delivered__c</fullName>
    <label>Delivered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>