force-app/main/default/objects/Broadcast__c/fields/Recipient_Count__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Count__c</fullName>
    <label>Recipient Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>