force-app/main/default/objects/Broadcast__c/fields/Recipients__c.field-meta.xml
<CustomField>
    <fullName>Recipients__c</fullName>
    <label>Recipients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>