force-app/main/default/objects/Broadcast__c/fields/Sent__c.field-meta.xml
<CustomField>
    <fullName>Sent__c</fullName>
    <label>Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>