force-app/main/default/objects/Broadcast__c/fields/Total_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Total_Delivered__c</fullName>
    <label>Total Delivered</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>