force-app/main/default/objects/Broadcast__c/fields/Total_Read__c.field-meta.xml
<CustomField>
    <fullName>Total_Read__c</fullName>
    <label>Total Read</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>