force-app/main/default/objects/Broadcast__c/fields/Total_Sent__c.field-meta.xml
<CustomField>
    <fullName>Total_Sent__c</fullName>
    <label>Total Sent</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>